<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_back"
    android:paddingBottom="@dimen/_16sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"

    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/add_web_link"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_med"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_10sdp"
        >
    </TextView>

    <EditText
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:id="@+id/noteLink"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/note_title"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:textColor="#E87F4E"
        android:textColorHint="@color/textHintColor"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/title"

        >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/noteLink"
        android:layout_marginTop="@dimen/_28sdp"
        >

        <TextView
            android:id="@+id/cancelTxt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#E87F4E"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"

            >

        </TextView>

        <TextView
            android:id="@+id/addTxt"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#E87F4E"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_15sdp">

        </TextView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>